// This is the public API offered by your entity.
syntax = "proto3";

import "common_api.proto";
import "google/protobuf/timestamp.proto";
import "kalix/annotations.proto";

package app.improving.storecontext.store;

enum ApiStoreStatus {
    API_STORE_STATUS_DRAFT = 0;
    API_STORE_STATUS_READY = 1;
    API_STORE_STATUS_OPEN = 2;
    API_STORE_STATUS_CLOSED = 3;
    API_STORE_STATUS_DELETED = 4;
    API_STORE_STATUS_RELEASED = 5;
    API_STORE_STATUS_UNKNOWN = 6;
}

message ApiStoreInfo {
    string name = 1;
    string description = 2;
    repeated ApiSku products = 3;
    ApiEventId  event = 4;
    ApiVenueId venue = 5;
    ApiLocationId location = 6;
    ApiOrganizationId sponsoring_org = 7;
}

message ApiStoreMetaInfo {
    ApiMemberId created_by = 1;
    google.protobuf.Timestamp created_on = 2;
    ApiMemberId last_modified_by = 3;
    google.protobuf.Timestamp last_modified_on = 4;
    ApiStoreStatus status = 5;
}

message ApiStoreUpdateInfo {
    optional string name = 1;
    optional string description = 2;
    repeated ApiSku products = 3;
    optional ApiEventId event = 4;
    optional ApiVenueId venue = 5;
    optional ApiLocationId location = 6;
    optional ApiOrganizationId sponsoring_org = 7;
}

message ApiStore {
    string store_id = 1 [(kalix.field).entity_key = true];
    ApiStoreInfo info = 2;
    ApiStoreMetaInfo meta = 3;
    ApiStoreStatus status = 4;
}

message ApiCreateStore {
    string store_id = 1 [(kalix.field).entity_key = true];
    ApiStoreInfo info = 2;
    ApiMemberId creating_member = 3;
}
message ApiUpdateStore {
    string store_id = 1 [(kalix.field).entity_key = true];
    ApiStoreUpdateInfo info = 2;
    ApiStoreMetaInfo meta = 3;
}
message ApiDeleteStore {
    string store_id = 1 [(kalix.field).entity_key = true];
    ApiMemberId deleting_member = 3;
}
message ApiReadyStore {
    string store_id = 1 [(kalix.field).entity_key = true];
    ApiMemberId readying_member = 3;
}
message ApiOpenStore {
    string store_id = 1 [(kalix.field).entity_key = true];
    ApiMemberId opening_member = 3;
}
message ApiCloseStore {
    string store_id = 1 [(kalix.field).entity_key = true];
    ApiMemberId closing_member = 3;
}
message ApiReleaseStore {
    string store_id = 1 [(kalix.field).entity_key = true];
    ApiMemberId releasing_member = 3;
}
message ApiAddProductsToStore {
    string store_id = 1 [(kalix.field).entity_key = true];
    repeated ApiSku products = 2;
    ApiMemberId adding_member = 3;
}
message ApiRemoveProductsFromStore {
    string store_id = 1 [(kalix.field).entity_key = true];
    repeated ApiSku products = 2;
    ApiMemberId removing_member = 3;
}

message ApiGetProductsInStore {
    string store_id = 1 [(kalix.field).entity_key = true];
}

message ApiProductsInStore {
    string store_id = 1 [(kalix.field).entity_key = true];
    repeated ApiSku products = 2;
}